syntax = "proto3";

package authproto;

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "/;authproto";

service AuthService {

  rpc Login(LoginRequest) returns (LoginResponse);

  rpc Signup(SignupRequest) returns (SignupResponse);

  rpc Refresh(RefreshRequest) returns (RefreshResponse);

  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string login = 1;
  string password = 2;
}
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message SignupRequest {
  string name = 1;
  string username = 2;
  string birthday = 3;
  string gender = 4;
  string password = 5;
}
message SignupResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshRequest {
  string refresh_token = 1;
}
message RefreshResponse {
  string access_token = 1;
}

message LogoutRequest {}
message LogoutResponse {}